Fix color de background tarjeta

--- a/app/src/Paginas/Inicio/Inicio.css
+++ b/app/src/Paginas/Inicio/Inicio.css
@@ -1,5 +1,5 @@
 
-.card-body {
+.bienvenida {
     background-color: #0f3f4f; /* Color celeste */
     padding: 20px; /* Espaciado interno */
     text-align: center; /* Alineación del texto al centro */
