--- a/app/src/Paginas/Usuarios/Usuarios.css
+++ b/app/src/Paginas/Usuarios/Usuarios.css
@@ -1,12 +1,22 @@
 
-  
-  .bienvenida {
-    background-color: #0f3f4f;
-    padding: 20px;
-    text-align: center; 
-  }
-  
-  .bienvenida h1 {
-    color: rgb(246, 239, 239); 
-  }
-  
+.usuario-container {
+  text-align: center;
+  margin: 20px;
+}
+
+.crear-usuario, .buscar-usuario, .resultados-busqueda {
+  margin: 15px;
+  padding: 15px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.crear-usuario form, .buscar-usuario input, .buscar-usuario button, .resultados-busqueda ul {
+  margin-top: 15px;
+}
+
+.resultados-busqueda li {
+  list-style: none;
+  margin: 5px 0;
+}
+
